@@ -31,12 +31,30 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>1.18.28</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>4.0.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.activation</groupId>
+			<artifactId>jakarta.activation-api</artifactId>
+			<version>2.1.3</version>
 		</dependency>
 
 		<!--<dependency>
@@ -76,27 +94,28 @@
 			<artifactId>crypto-lib</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/lib/arcryptolib.jar</systemPath>
+			<systemPath>${pom.basedir}/lib/arcryptolib.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>ua.avtor.crypto-lib</groupId>
 			<artifactId>JcaProv-lib</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/lib/AvtorJcaProv.jar</systemPath>
+			<systemPath>${pom.basedir}/lib/AvtorJcaProv.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>ua.avtor.crypto-lib</groupId>
 			<artifactId>CI3Client-lib</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/lib/Cl3ClientLib.jar</systemPath>
+			<systemPath>${pom.basedir}/lib/Cl3ClientLib.jar</systemPath>
 		</dependency>
 
 	</dependencies>
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -105,22 +124,28 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.28</version>
 						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+						<arg>--add-modules</arg>
+						<arg>jdk.crypto.cryptoki</arg>
+						<arg>--add-exports</arg>
+						<arg>jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					<includeSystemScope>true</includeSystemScope>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
